[package]
name = "tip-router-operator-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Jito Tip Router"

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
base64 = "0.13"
clap = { workspace = true }
clap_old = { workspace = true }
crossbeam-channel = "0.5"
ellipsis-client = "1.1"
env_logger = { workspace = true }
hex = "0.4"
im = "15.1"
itertools = "0.11"
jito-bytemuck = { workspace = true }
jito-restaking-program = { workspace = true }
jito-tip-distribution-sdk = { workspace = true }
jito-tip-payment-sdk = { workspace = true }
jito-tip-router-client = { workspace = true }
jito-tip-router-core = { workspace = true }
jito-tip-router-program = { workspace = true }
log = { workspace = true }
meta-merkle-tree = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-accounts-db = { workspace = true }
solana-clap-utils = { workspace = true }
solana-client = { workspace = true }
solana-core = { workspace = true }
solana-geyser-plugin-manager = { workspace = true }
solana-gossip = { workspace = true }
solana-ledger = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-program = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-stake-program = { workspace = true }
solana-streamer = { workspace = true }
solana-transaction-status = { workspace = true }
solana-unified-scheduler-pool = { workspace = true }
solana-vote = { workspace = true }
spl-memo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
tempfile = "3.2"
