[package]
name = "tip-router-operator-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Jito Tip Router"

[dependencies]
anchor-lang = { workspace = true }
anyhow = "1.0"
base64 = "0.13"
borsh = "0.10"
clap = { version = "4.0", features = ["derive"] }
ellipsis-client = "0.2"
env_logger = "0.10"
hex = "0.4"
im = "15.1"
itertools = "0.11"
jito-bytemuck = { workspace = true }
jito-restaking-program = { workspace = true }
jito-tip-distribution-sdk = { path = "../tip_distribution_sdk" }
jito-tip-payment-sdk = { workspace = true }
jito-tip-router-client = { workspace = true }
jito-tip-router-core = { path = "../core" }
jito-tip-router-program = { workspace = true }
log = "0.4"
meta-merkle-tree = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
solana-accounts-db = { workspace = true }
solana-client = "1.16"
solana-ledger = { workspace = true }
solana-metrics = "1.16"
solana-program = "1.16"
solana-rpc-client = "1.16"
solana-runtime = { workspace = true }
solana-sdk = "1.16"
solana-stake-program = { workspace = true }
solana-vote = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

# VRF dependencies
mangekyou = { path = "../mangekyou" }
kamui-program = { path = "../mangekyou/kamui-program" }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
tempfile = "3.2"
